updated to 1.0
also migrated tests from testng to junit + elasticsearch-test + randomized runner